# file-receiver

./: .env.example  Makefile  README.md  pyproject.toml
docker/: Dockerfile  Dockerfile~  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
scripts/: entrypoint.py  entrypoint.sh
src/: main.py
src/api/: routers.py
src/api/routes/: receiver.py
src/api/schemas/: __init__.py  receiver.py
src/core/config/: defaults.py  image.py  log.py  websocket.py
src/enums/: __init__.py  file.py  websocket.py
src/handlers/: __init__.py  image.py
src/managers/: __init__.py  base.py  image.py  websocket.py
src/validators/: __init__.py  base.py  image.py
templates/: index.html
