[tool.poetry]
name = "file-receiver"
version = "0.1.0"
description = ""
authors = ["usik-sviatoslav <usik.sviatoslav.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
uvicorn = "^0.34.2"
python-multipart = "^0.0.20"
pydantic = "^2.11.5"
aiofiles = "^24.1.0"
pillow = "^11.2.1"
pillow-heif = "^0.22.0"
websockets = "^15.0.1"
imagehash = "^4.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
mypy = "^1.15.0"
isort = "^6.0.1"
black = "^25.1.0"
flake8 = "^7.1.2"
flake8-pyproject = "^1.2.3"
flake8-functions = "^0.0.8"
flake8-variables-names = "^0.0.6"
flake8-class-attributes-order = "^0.3.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
pytest-mock = "^3.14.0"
pytest-cov = "^6.0.0"
types-aiofiles = "^24.1.0.20241221"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
force_grid_wrap = 0
multi_line_output = 3
use_parentheses = true
include_trailing_comma = true

[tool.black]
line-length = 120

[tool.flake8]
max-complexity = 8
max-line-length = 120
exclude = [".env", ".git", "poetry.lock", ".pytest_cache", "__pycache__", "venv"]
per-file-ignores = ['__init__.py:F401,F403']
ignore = []

[tool.mypy]
python_version = "3.11"
mypy_path = "./src"
plugins = ["pydantic.mypy"]
ignore_missing_imports = false
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["/tests"]
asyncio_default_fixture_loop_scope = "session"
python_files = ["tests.py", "test_*.py", "*_test.py"]
addopts = ["-x", "--ff", "--nf", "-W error", "--color=yes", "--cov-report=html", "--cov-report=term-missing"]
markers = ["unit", "smoke"]

[tool.coverage.run]
source = ["/src"]
omit = ["/src/core/*", "/tests/*"]
data_file = "/tests/htmlcov/.coverage"
branch = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.html]
directory = "/tests/htmlcov"
